# spotify-playlist-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install-zipapp.sh
src/: __main__.py  spotify_playlist_reader.py
