[project]
name = "spotify-playlist-download"
authors = [
    {name = "MB"},
]
description = """
    Download Spotify songs from given playlists searched on Soundcloud or Youtube using ytdlp.
"""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"

dynamic = [
    "version",
    "dependencies"
]
urls = [
    {Homepage = "https://github.com/m-bartlett/spotify-playlist-reader"},
    {Issues = "https://github.com/m-bartlett/spotify-playlist-reader/issues"}
]

scripts = [
    {spot-playlist-dl = "spotify_playlist_download.__main__:main"}
]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "spotify_playlist_download.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"spotify_playlist_download" = "src"}

[tool.ty.environment]
root = ["."]
python-version = "3.14"
python = "./venv"

[tool.ty.rules]
# division-by-zero = "ignore"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.autopep8]
max_line_length = 100